kubernetes/django-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    env: prod
    owner: Smurov
spec:
  selector:
    project: django-app
  ports:
  - protocol: TCP
    port: 80  
    targetPort: 80
  type: ClusterIP
