kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
   - host: star-burger.test
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: django-service
                port: 
                  number: 80
